Revision history for Fasta

{{$NEXT}}

0.0.5  2024-06-24T21:05:24+02:00
    - Modernize test file extension
    - Modernize pod
    - Add sponsor link and button
    - Update copyright year

0.0.4  2021-09-08T15:05:04+02:00
    - Change file extension to .rakumod
    - Migrate to zef ecosystem
    - Update email address
    - Update copyright year

0.0.3  2020-05-13T23:15:17+02:00
    - Make .count-bases about 9.5x as fast by using native int arrays
      for counting, and windowing over the string with nqp::ordat.

0.0.2  2020-05-13T16:16:11+02:00
    - Add method .sequences, to produce the sequences as strings

0.0.1  2020-05-13T15:01:46+02:00
    - Initial version